--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,5 +6,26 @@ spring:
       discovery:
         locator:
           enabled: true
+      default-filters:
+      routes:
+      - id: provider
+        uri: lb://provider
+        path: /customers
+        predicates:
+#        - Host=**.hiram.cn:8081
+        - RemoteAddr=192.168.1.64/24
+        filters:
+        - AddResponseHeader=X-Request-Foo, Bar
+        - AddRequestHeader=X-Request-Foo, Bar
 server:
   port: 8081
+eureka:
+  instance:
+    prefer-ip-address: true
+    health-check-url-path: /actuator/info
+    status-page-url-path: /actuator/health
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
